--- a/view/frontend/templates/component/product_carousel.phtml
+++ b/view/frontend/templates/component/product_carousel.phtml
@@ -5,11 +5,9 @@ $componentConfiguration = $block->getData();
 /** @var \MageSuite\ContentConstructorFrontend\Model\Component\ProductCarousel $viewModel */
 $viewModel = $block->getViewModel();
 $visibility = $block->getVisibilityClass();
-$navIconPrevPath = $block->getVar('product_carousel/navigation/arrows/prev/path');
-$navIconNextPath = $block->getVar('product_carousel/navigation/arrows/next/path');
 ?>
 
-<div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>>
+<div <?= empty($visibility) ? '' : 'class="' . $visibility . '"'; ?>>
     <div class="cs-container cs-container--products-carousel">
         <div class="cs-container__inner">
             <div class="cs-products-carousel <?=$block->getVar('product_carousel/additional_css_classes');?>">
@@ -30,20 +28,22 @@ $navIconNextPath = $block->getVar('product_carousel/navigation/arrows/next/path'
 
                     <?php if ($block->getVar('product_carousel/navigation/show')): ?>
                         <button class="cs-products-carousel__nav cs-products-carousel__nav--prev <?= $block->getVar('brand_carousel/navigation/arrows/prev/additional_css_classes') ?>" type="button">
-                            <svg class="cs-products-carousel__nav-icon">
-                                <use
-                                    xlink:href="<?= $navIconPrevPath ?>"
-                                    href="<?= $navIconPrevPath ?>">
-                                </use>
-                            </svg>
+                            <?= $this->getLayout()
+                                ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                                ->setIconUrl($block->getVar('product_carousel/navigation/arrows/prev/path'))
+                                ->setCssClass("cs-products-carousel__nav-icon")
+                                ->setInlined(true)
+                                ->toHtml(); 
+                            ?>
                         </button>
                         <button class="cs-products-carousel__nav cs-products-carousel__nav--next <?= $block->getVar('brand_carousel/navigation/arrows/next/additional_css_classes') ?>" type="button">
-                            <svg class="cs-products-carousel__nav-icon">
-                                <use
-                                    xlink:href="<?= $navIconNextPath ?>"
-                                    href="<?= $navIconNextPath ?>">
-                                </use>
-                            </svg>
+                            <?= $this->getLayout()
+                                ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                                ->setIconUrl($block->getVar('product_carousel/navigation/arrows/next/path'))
+                                ->setCssClass("cs-products-carousel__nav-icon")
+                                ->setInlined(true)
+                                ->toHtml(); 
+                            ?>
                         </button>
                     <?php endif; ?>
 
